# JobScry

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 1fd90d563f5e_initial_schema.py  2cde58a24092_add_settings_llm_model.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: __init__.py  auth.py  credentials.py  ingestion.py  matching.py  pipeline.py  profiles.py  providers.py  resumes.py  searches.py  settings.py
backend/app/core/: config.py  crypto.py  exceptions.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/matching/: eligibility.py  llm.py  scoring.py
backend/app/models/: __init__.py  application.py  credential.py  enums.py  job.py  match.py  notification.py  profile.py  provider.py  resume.py  search.py  seen_job.py  settings.py  user.py
backend/app/notifications/: base.py  email.py  telegram.py
backend/app/providers/: base.py  catalog.py  dedup.py  registry.py  salary.py
backend/app/providers/adapters/: __init__.py  _common.py  adzuna.py  apify_linkedin.py  apify_naukri.py  greenhouse_lever.py  jooble.py  jsearch.py  remotive.py  serpapi.py
backend/app/repositories/: credential.py  job.py  match.py  profile.py  provider.py  resume.py  search.py  seen_job.py  settings.py  skill.py  user.py
backend/app/scheduler/: celery_app.py  locks.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  common.py  credential.py  ingestion.py  match.py  notification.py  pipeline.py  profile.py  provider.py  resume.py  search.py  settings.py  user.py
backend/app/services/: auth.py  credential.py  ingestion.py  matching.py  notification.py  pipeline.py  profile.py  provider.py  resume.py  search.py  settings.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_health.py  test_ingestion.py  test_matching.py  test_matching_domain.py  test_models.py  test_pipeline.py  test_providers_domain.py
docs/: ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  HANDBOOK.md
frontend/: Dockerfile  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.spec.json  vite.config.mts
frontend/public/i18n/: en.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/guards/: auth.guard.spec.ts  auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.spec.ts  auth.interceptor.ts
frontend/src/app/core/models/: api.models.ts
frontend/src/app/core/services/: api.service.ts  auth.service.ts  (+2 more)
frontend/src/app/layout/: shell.component.html  shell.component.ts
frontend/src/environments/: environment.ts
infra/nginx/: default.conf
(+17 files in other folders)
