[project]
name = "ajh-backend"
version = "0.1.0"
description = "AI Job Hunter Platform — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy[asyncio]==2.0.51",
    "alembic==1.18.5",
    "asyncpg==0.30.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "email-validator==2.2.0",  # pydantic EmailStr backend
    "celery==5.6.3",
    "redis==8.0.1",
    "httpx==0.28.1",
    "pyjwt==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",  # pin: passlib 1.7.4 reads bcrypt.__about__, removed in bcrypt>=4.1
    "python-multipart==0.0.20",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "aiosqlite==0.22.1",  # driver-free local Alembic autogenerate / DB smoke checks
    "black==24.10.0",
    "ruff==0.8.4",
    "isort==5.13.2",
    "mypy==1.14.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

# Keep ruff's import sorter and standalone isort in agreement.
[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
